--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>My first Bitstarter -- vaibhavinbayarea@gmail.com</title>
+		<title>My first Bitstarter</title>
 		<link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
 		<style type="text/css">
 			body {
@@ -52,12 +52,12 @@
 			</div>
 			<div class="row heading">
 				<div class="span12">
-					<h1>Crowdfunded living</h1>
+					<h1>Bitstarter Title</h1>
 				</div>
 			</div>
 			<div class="row subheading">
 				<div class="span12">
-					<p class="lead">Micro funding of dreams</p>
+					<p class="lead">This is my first bitstarter project.</p>
 				</div>
 			</div>
 			<div class="row pitch">
